--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "require": {
     "php": ">=5.4",
     "symfony/console": "3.0.*",
-    "illuminate/console": "5.2.*"
+    "illuminate/console": ">5.*"
   },
   "require-dev" : {
     "phpunit/phpunit": "5.1.*"
