--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "require": {
     "php": ">=5.4",
-    "symfony/console": "3.0.*",
+    "symfony/console": "2.*|3.*",
     "illuminate/console": "5.*"
   },
   "require-dev" : {
