--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   "license": "MIT",
   "require": {
     "php": ">=5.4",
-    "symfony/console": "2.*|3.*",
-    "illuminate/console": "5.*"
+    "symfony/console": ">=2.0.0",
+    "illuminate/console": ">=5.0.0"
   },
   "require-dev" : {
     "phpunit/phpunit": "5.1.*"
